Fix: Do not display 'call parked at XXX' on the statusbar when running in asterisk-12 and up

Asterisk-12 and up return the 'parkext' instead of the 'parking_space', which is useless.

Issue reported and denied to digium jira in https://issues.asterisk.org/jira/browse/ASTERISK-26029

resolves 302