src/pbx_impl/ast112/ast112.c
@@ -1228,32 +1228,31 @@ int sccp_wrapper_asterisk112_hangup(PBX_CHANNEL_TYPE * ast_channel)
  */
 static sccp_parkresult_t sccp_wrapper_asterisk112_park(const sccp_channel_t * hostChannel)
 {
-	char extout[AST_MAX_EXTENSION];
-	char extstr[20];
 	sccp_parkresult_t res = PARK_RESULT_FAIL;
-
-	// PBX_CHANNEL_TYPE *bridgedChannel = NULL;
-
-	memset(extstr, 0, sizeof(extstr));
-
-	struct ast_bridge_channel *bridge_channel = NULL;
+	char extout[AST_MAX_EXTENSION] = "";
+	RAII_VAR(struct ast_bridge_channel *, bridge_channel, NULL, ao2_cleanup);
+	
+	if (!ast_parking_provider_registered()) {
+		return res;
+	}
 
 	AUTO_RELEASE sccp_device_t *device = sccp_channel_getDevice(hostChannel);
-	if (device) {
+	if (device && (ast_channel_state(hostChannel->owner) ==  AST_STATE_UP)) {
 		ast_channel_lock(hostChannel->owner);								/* we have to lock our channel, otherwise asterisk crashes internally */
 		bridge_channel = ast_channel_get_bridge_channel(hostChannel->owner);
+		ast_channel_unlock(hostChannel->owner);
 		if (bridge_channel) {
-			if (!ast_parking_park_call(bridge_channel, extout, sizeof(extout))) {
-				snprintf(extstr, sizeof(extstr), "%c%c %.16s" , 128, SKINNY_LBL_CALL_PARK_AT, extout); 
-
-				sccp_dev_displayprinotify(device, extstr, 1, 10);
+			if (!ast_parking_park_call(bridge_channel, extout, sizeof(extout))) {			/* new asterisk-12/13 implementation returns the parkext not the parking_space */
+														/* See: https://issues.asterisk.org/jira/browse/ASTERISK-26029 */
+				char extstr[20];
+				memset(extstr, 0, sizeof(extstr));
+				//snprintf(extstr, sizeof(extstr), "%c%c %.16s", 128, SKINNY_LBL_CALL_PARK_AT, extout);
+				//sccp_dev_displayprinotify(device, extstr, 1, 10);				/* suppressing output of wrong parking information */
+				sccp_dev_displayprinotify(device, SKINNY_DISP_CALL_PARK, 1, 10);
 				sccp_log((DEBUGCAT_CHANNEL | DEBUGCAT_CORE)) (VERBOSE_PREFIX_3 "%s: Parked channel %s on %s\n", DEV_ID_LOG(device), ast_channel_name(hostChannel->owner), extout);
-
 				res = PARK_RESULT_SUCCESS;
 			}
-			ast_channel_unref(bridge_channel);
 		}
-		ast_channel_unlock(hostChannel->owner);
 	}
 	return res;
 }
